// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoleSelector Checks snapshot - has multiple roles: multipleRoles 1`] = `
<div
  class="tui-bulkManualRatingRoleSelector"
>
  <div
    class="tui-bulkManualRatingRoleSelector__ratingAs"
    id="uid-1-rating-as"
  >
    [[rating_as_a, pathway_manual]]
  </div>
  <div
    class="tui-bulkManualRatingRoleSelector__selectRole"
  >
    <select-stub
      aria-labelledby="uid-1-rating-as"
      disabled="false"
      large="false"
      multiple="false"
      options="[object Object]"
      value="-1"
    />
  </div>
  <confirmation-modal-stub
    closebutton="false"
    confirmbuttontext="[[ok, core]]"
    confirmdisabled="false"
    loading="false"
    open="false"
    size="normal"
    title="[[modal_confirm_update_role_title, pathway_manual]]"
  />
</div>
`;

exports[`RoleSelector Checks snapshot - has single role: singleRole 1`] = `
<div
  class="tui-bulkManualRatingRoleSelector"
>
  <div
    class="tui-bulkManualRatingRoleSelector__ratingAs"
    id="uid-1-rating-as"
  >
    [[rating_as_a, pathway_manual]]
  </div>
  <div
    class="tui-bulkManualRatingRoleSelector__selectRole"
  >
    <select-stub
      aria-labelledby="uid-1-rating-as"
      disabled="false"
      large="false"
      multiple="false"
      options="[object Object]"
      value="-1"
    />
  </div>
  <confirmation-modal-stub
    closebutton="false"
    confirmbuttontext="[[ok, core]]"
    confirmdisabled="false"
    loading="false"
    open="false"
    size="normal"
    title="[[modal_confirm_update_role_title, pathway_manual]]"
  />
</div>
`;

exports[`RoleSelector Checks snapshot - has specified role: specifiedRole 1`] = `
<div
  class="tui-bulkManualRatingRoleSelector"
>
  <div
    class="tui-bulkManualRatingRoleSelector__ratingAs"
    id="uid-1-rating-as"
  >
    [[rating_as_appraiser, pathway_manual]]
  </div>
  <!--v-if-->
  <confirmation-modal-stub
    closebutton="false"
    confirmbuttontext="[[ok, core]]"
    confirmdisabled="false"
    loading="false"
    open="false"
    size="normal"
    title="[[modal_confirm_update_role_title, pathway_manual]]"
  />
</div>
`;
